:construction: Got the initial version of the plugin working.

--- a/spec/fixtures/_config.yml
+++ b/spec/fixtures/_config.yml
@@ -3,6 +3,10 @@ timezone: UTC
 gems:
 - jekyll-thumbor
 
+thumbor:
+  url: https://thumbor.example.com
+  key: my-security-key
+
 defaults:
   -
     scope:
