:construction: Working on getting bumpversion working.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -8,10 +8,9 @@ search = pkg/jekyll-thumbor-{current_version}.gem
 replace = pkg/jekyll-thumbor-{next_version}.gem
 
 [bumpversion:file:.appveyor.yml]
-search = v{current_version}-\{branch\}-\{build\}
-replace = v{next_version}-\{branch\}-\{build\}
+search = v{current_version}
+replace = v{next_version}
 
 [bumpversion:file:lib/jekyll/thumbor_tag.rb]
 search = 'VERSION = "{current_version}"'
 replace = 'VERSION = "{next_version}"'
-
