--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,7 +7,7 @@ tag = True
 search = pkg/jekyll-thumbor-{current_version}.gem
 replace = pkg/jekyll-thumbor-{next_version}.gem
 
-[bumpversion:file:.appveyor.yml]
+[bumpversion:file:appveyor.yml]
 search = v{current_version}
 replace = v{next_version}
 
