:construction: Working on getting bumpversion working.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,15 +2,16 @@
 current_version = 0.1.0
 commit = True
 tag = True
+message = :bookmark: {current_version} → {new_version}
 
 [bumpversion:file:.travis.yml]
 search = pkg/jekyll-thumbor-{current_version}.gem
-replace = pkg/jekyll-thumbor-{next_version}.gem
+replace = pkg/jekyll-thumbor-{new_version}.gem
 
 [bumpversion:file:appveyor.yml]
 search = v{current_version}
-replace = v{next_version}
+replace = v{new_version}
 
 [bumpversion:file:lib/jekyll/thumbor_tag.rb]
 search = 'VERSION = "{current_version}"'
-replace = 'VERSION = "{next_version}"'
+replace = 'VERSION = "{new_version}"'
