:construction: Fixed up some stuff.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 0.2.0
-commit = True
-tag = True
+commit = False
+tag = False
 message = :bookmark: {current_version} → {new_version}
 
 [bumpversion:file:.travis.yml]
