:construction_worker: Remove the PackageCloud thing.
It's not working while and don't really need it anyway.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,13 +4,8 @@ commit = False
 tag = False
 message = :bookmark: {current_version} → {new_version}
 
-[bumpversion:file:.travis.yml]
-search = pkg/jekyll-thumbor-{current_version}.gem
-replace = pkg/jekyll-thumbor-{new_version}.gem
-
 [bumpversion:file:appveyor.yml]
 search = v{current_version}
 replace = v{new_version}
 
-[bumpversion:file:lib/jekyll/thumbor_tag.rb]
-
+[bumpversion:file:lib/jekyll/thumbor_tag/version.rb]
