--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.3.0
-commit = False
+current_version = 0.4.0
+commit = True
 tag = False
 message = :bookmark: {current_version} → {new_version}
 
