--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.4.1
+current_version = 0.4.2
 commit = True
 tag = False
 message = :bookmark: {current_version} → {new_version}
@@ -10,3 +10,6 @@ replace = v{new_version}
 
 [bumpversion:file:lib/jekyll/thumbor_tag/version.rb]
 
+[bumpversion:file:Gemfile.lock]
+search = jekyll-thumbor ({current_version})
+replace = jekyll-thumbor ({new_version})
